fix: 修复Java 8兼容性问题和多个安全/业务逻辑问题
## 后端修复

### Java 8 兼容性修复
- 将 Map.of() 替换为 Collections.emptyMap() (Java 9+ 特性)
- 将 List.of() 替换为 Collections.emptyList() (Java 9+ 特性)
- 修复 URLEncoder.encode() 的 UnsupportedEncodingException 异常处理

### 高危安全问题修复
- 修复密码重置返回明文密码的安全风险，改为记录日志
- 限制CORS配置，仅允许 localhost 和 127.0.0.1 来源
- 添加响应头暴露配置

### 业务逻辑修复
- 修复 ExamRecordServiceImpl 中的空指针风险
- 完善用户信息获取失败时的状态清理

## 前端修复

### 内存泄漏修复
- 修复 dashboard 组件中 ECharts 事件监听器未清理导致的内存泄漏
- 添加 onUnmounted 钩子清理资源

### 路由安全修复
- 添加路由守卫重试标志，防止无限重定向
- 完善用户信息获取失败时的清理逻辑

## 构建验证
- Maven 编译通过
- 所有 Java 8 兼容性问题已解决